<resources>
    <string name="app_name">Mobile Secret Code &amp; Locator</string>
    <string name="cannot_access_camera">Cannot access camera, is it being used by another app?</string>
    <string name="no_camera">No camera</string>
    <string name="milliseconds_format">%d milliseconds\n</string>
    <string name="combine_app_name">MobilePhoneSecretNumbers</string>
    <string name="title_1">Secret Code</string>
    <string name="title_2">Caller ID</string>
    <string name="title_3">Mobile Tips and Tricks</string>
    <string name="desc_1">Welcome to Mobile Secret Code &amp; Locator! \n where you can discover the secret codes to explore hidden features on your device!</string>
    <string name="desc_2">Easily identify unknown incoming calls effortlessly and connect with confidence with our added caller ID feature.</string>
    <string name="desc_3">Get secret codes and expert tips and tricks to reveal your device\'s hidden features. Save your valuable time now! Let\'s get started!</string>
    <string name="close">close</string>
    <string name="open">open</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="tmc_part_1">The application is notifying you to the presence of an app that provides several services that are essential information for safer and more efficient use. \n</string>
    <string name="tmc_text_1">By pressing the Accept button, I declare I have read and accepted the following condition of use.</string>
    <string name="tmc_text_2">If we find the app is being used outside its terms of use, we may restrict access to it.</string>
    <string name="tmc_text_3">Any type of modification to the app or its components is not allowed.</string>
    <string name="tmc_text_4">Privacy Policy may be updated from time to time for any reason. We will notify you of any changes to our Privacy Policy by posting the new Privacy Policy here.</string>
    <string name="tmc_text_5">We do not share any kind of your Personal Data with third parties.</string>
    <string name="following_link">Following link :\t</string>
    <string name="privacy_hyper"><b><u>Privacy Policy</u></b></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="tmc_hyper"><b><u>Terms and Condition</u></b></string>
    <string name="terms_and_condition">Terms and Condition</string>
    <string name="mobile_codes">Mobile Secret Codes</string>
    <string name="favourites">Favourites</string>
    <string name="mobile_tips">Mobile Tips</string>
    <string name="mobile_tricks">Mobile Tricks</string>
    <string name="share">Share With Friends</string>
    <string name="rate">Rate</string>
</resources>